Problem fixed (Update)

--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -143,28 +143,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "id": "8718ab53-b52f-497c-9a90-48b44fde0539",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\Sasufox\\AppData\\Roaming\\Python\\Python311\\site-packages\\pyannote\\audio\\core\\io.py:43: UserWarning: torchaudio._backend.set_audio_backend has been deprecated. With dispatcher enabled, this function is no-op. You can remove the function call.\n",
-      "  torchaudio.set_audio_backend(\"soundfile\")\n",
-      "C:\\Users\\Sasufox\\AppData\\Roaming\\Python\\Python311\\site-packages\\torch_audiomentations\\utils\\io.py:27: UserWarning: torchaudio._backend.set_audio_backend has been deprecated. With dispatcher enabled, this function is no-op. You can remove the function call.\n",
-      "  torchaudio.set_audio_backend(\"soundfile\")\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pyannotebook_reborn"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "id": "0242af75-dcba-45d4-8fe1-243f86a3787d",
    "metadata": {},
    "outputs": [],
@@ -174,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "id": "b32967a0-f9b3-48a6-92d1-e6bd5e12af94",
    "metadata": {
     "scrolled": true
@@ -183,7 +172,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2d25d84d33854fcfa2cd750c5fb61c8e",
+       "model_id": "9a541a1877594f47abbca14e2cacc7ed",
        "version_major": 2,
        "version_minor": 0
       },
@@ -191,7 +180,7 @@
        "Pyannotebook(audio_64='UklGRmCmDgBXQVZFZm10IBAAAAABAAEAgD4AAAB9AAACABAATElTVDQAAABJTkZPSUNNVBEAAABQcm9jZXNzZWQ…"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -211,6 +200,38 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "3553854a-dafe-460e-9cfd-be3d5ec6ecbd",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "adedda5d-5731-4b12-876f-0e7c8f5848a5",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0d02668b-ccca-41b4-b147-2286058e82f1",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "27a51f98-8c1c-4913-81e9-a414bd56c888",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "9d005941-f420-44af-8136-9e17a63f7292",
    "metadata": {},
    "outputs": [],
@@ -218,17 +239,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "c2e197c3",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1"
+       "5"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -263,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "e70c2406-293d-4ef5-942d-fa705abc9b78",
    "metadata": {},
    "outputs": [
@@ -271,12 +292,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ANNOTATION :[ 00:00:13.000 -->  00:00:17.260] region-tl1kdmo34o D\n",
-      "[ 00:00:16.580 -->  00:00:18.140] region-tihammvl37 E\n",
-      "[ 00:00:20.400 -->  00:00:24.540] region-h2m2ncdrr58 A\n",
-      "[ 00:00:21.020 -->  00:00:24.940] region-a88qphqjkh A\n",
-      "[ 00:00:21.900 -->  00:00:25.880] region-rl8as3uqh1g B\n",
-      "[ 00:00:26.160 -->  00:00:29.180] region-4od52klm508 C\n"
+      "ANNOTATION :\n"
      ]
     }
    ],
@@ -314,24 +330,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "id": "6fed25e1-8187-42d0-96a4-b65f79d22811",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[{'start': 1.7320001220703125,\n",
-       "  'end': 3.5520001220703126,\n",
-       "  'id': 'region-ihuotg9d958',\n",
+       "[{'start': 3.46,\n",
+       "  'end': 7.379999999999998,\n",
+       "  'id': 'region-c0aohug05lo',\n",
        "  'label': 'A'},\n",
-       " {'start': 3.3120001220703115,\n",
-       "  'end': 4.232000122070313,\n",
-       "  'id': 'region-613glba4ssk',\n",
-       "  'label': 'B'}]"
+       " {'start': 8.62,\n",
+       "  'end': 12.919999999999995,\n",
+       "  'id': 'region-qo9uttn9epo',\n",
+       "  'label': 'D'},\n",
+       " {'start': 13.66, 'end': 18.54, 'id': 'region-9emu7uqnnm', 'label': 'B'}]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -400,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "id": "5e427831-9f0c-4aff-867e-32c290975bf4",
    "metadata": {},
    "outputs": [],
@@ -412,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "8c554323-3a1e-47fa-9781-bc75a2749d8f",
    "metadata": {},
    "outputs": [],
@@ -442,6 +459,14 @@
    "source": [
     "p.load_timelines(\"03125.uem\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6118036a-2644-4dad-854e-0543e597f62d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
